--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <div class="row">
                     <div class="form-main col-lg-6 col-xl-6 col-xxl-6 col-md-11 col-11">
                         <img src="img/252801713_451359926409438_1583968730591392384_n.jpg" alt="">
-                        <h3>আমার সাথে যোগাযোগ করতে <br> <span>চাও??</span></h1>
+                        <h3> Contact <span>Me</span></h1>
                             <form action="https://formspree.io/f/mbjejrvj" method="POST">
-                                <input class="name" type="name" name="name" placeholder="তোমার নাম কি?">
-                                <input class="name" type="gmail" name="gmail" placeholder="তোমার জিমেইল">
-                                <textarea class="name" name="message" cols="4" rows="4" placeholder="তোমার সম্পর্কে"></textarea>
+                                <input class="name" type="name" name="name" placeholder="What's your name?">
+                                <input class="name" type="gmail" name="gmail" placeholder="Enter your Gmail address">
+                                <textarea class="name" name="message" cols="4" rows="4" placeholder="About you"></textarea>
                                 <button type="submit">Submit</button>
                             </form>
                     </div>
